Bug 1770290 - Ensure the InitFontList thread is joined before destroying gfxPlatformFontList. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D147099